--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
           versionID: 'production'
         });
       }
-      v.src = "https://github.com/KarnSinghGIT/react-chat//packages/widget/dist
-/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+      v.src = "https://github.com/KarnSinghGIT/react-chat//packages/widget/dist/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
     })(document, 'script');
   </script>
 </body>
